--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,15 @@
 .header {
+    margin-top: 20px;
     text-align: center;
-    border-color: royalblue;
+    /* border-color: royalblue; */
     border-style: solid;
 }
 
+h1{
+    margin-top: 10px;
+}
+
+.butt{
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
